--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bl-3-3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://VeronikaSavluk.github.io/bl-3-3/",
+  "homepage": "https://github.com/ElenaLatynina/Practice-3.git",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
